Fix T96146: Subdivide curve node uninitialized dangling handles

Handles of non-cyclic bezier curves were not initialized.
Now properly copy the dangling handle positions and types
from the source curve.